@@ -1,5 +1,3 @@
-import java.util.ArrayList;
-
 public class ASTEquals extends SimpleNode 
 {
 	public ASTEquals(int id) 
@@ -16,23 +14,16 @@ public class ASTEquals extends SimpleNode
 	{
 		jjtGetChild(0).interpret();
 	    jjtGetChild(1).interpret();
-	    if (ParfANode.stack[ParfANode.p] instanceof Double && ParfANode.stack[ParfANode.p - 1] instanceof Double) 
+	    String val = ParfANode.stack[ParfANode.p - 1].toString();
+	    String val1 = ParfANode.stack[ParfANode.p].toString();
+	    try
 	    {
-	    	ParfANode.stack[--ParfANode.p] = new Boolean(((Double) ParfANode.stack[ParfANode.p]).equals((Double) ParfANode.stack[ParfANode.p + 1]));
+	    	ParfANode.stack[--ParfANode.p] = Boolean.valueOf(Double.parseDouble(val) == Double.parseDouble(val1));
 	    }
-	    else if (ParfANode.stack[ParfANode.p] instanceof Boolean && ParfANode.stack[ParfANode.p - 1] instanceof Boolean) 
+	    catch(NumberFormatException e)
 	    {
-	    	ParfANode.stack[--ParfANode.p] = new Boolean(((Boolean) ParfANode.stack[ParfANode.p]).equals((Boolean) ParfANode.stack[ParfANode.p + 1]));
+	    	
+	    	ParfANode.stack[ParfANode.p] = Boolean.valueOf(ParfANode.stack[ParfANode.p].toString().equals(ParfANode.stack[ParfANode.p + 1].toString())); 
 	    }
-	    else if (ParfANode.stack[ParfANode.p] instanceof String && ParfANode.stack[ParfANode.p - 1] instanceof String) 
-	    {
-	    	ParfANode.stack[--ParfANode.p] = new Boolean(((String) ParfANode.stack[ParfANode.p]).equals((String) ParfANode.stack[ParfANode.p + 1]));
-	    }
-	    else if (ParfANode.stack[ParfANode.p] instanceof ArrayList<?> && ParfANode.stack[ParfANode.p - 1] instanceof ArrayList<?>) 
-	    {
-	    	ParfANode.stack[--ParfANode.p] = new Boolean(((ArrayList<?>) ParfANode.stack[ParfANode.p]).equals((ArrayList<?>) ParfANode.stack[ParfANode.p + 1]));
-	    }
-	    else
-	    	throw new IllegalStateException();
 	}
 }
