@@ -14,17 +14,16 @@ public class ASTNotEquals extends SimpleNode
 	{
 		jjtGetChild(0).interpret();
 	    jjtGetChild(1).interpret();
-	    if (ParfANode.stack[ParfANode.p] instanceof Double) 
+	    String val = ParfANode.stack[ParfANode.p - 1].toString();
+	    String val1 = ParfANode.stack[ParfANode.p].toString();
+	    try
 	    {
-	    	ParfANode.stack[--ParfANode.p] = !(new Boolean(((Double) ParfANode.stack[ParfANode.p]).equals((Double) ParfANode.stack[ParfANode.p])));
+	    	ParfANode.stack[--ParfANode.p] = Boolean.valueOf(Double.parseDouble(val) != Double.parseDouble(val1));
 	    }
-	    else if (ParfANode.stack[ParfANode.p] instanceof Boolean) 
+	    catch(NumberFormatException e)
 	    {
-	    	ParfANode.stack[--ParfANode.p] = !(new Boolean(((Boolean) ParfANode.stack[ParfANode.p]).equals((Boolean) ParfANode.stack[ParfANode.p])));
-	    }
-	    else if (ParfANode.stack[ParfANode.p] instanceof String) 
-	    {
-	    	ParfANode.stack[--ParfANode.p] = !(new Boolean(((String) ParfANode.stack[ParfANode.p]).equals((String) ParfANode.stack[ParfANode.p])));
+	    	
+	    	ParfANode.stack[ParfANode.p] = Boolean.valueOf(!ParfANode.stack[ParfANode.p].toString().equals(ParfANode.stack[ParfANode.p + 1].toString())); 
 	    }
 	}
 }
